--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "proximo-nivel",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "",
+    "icon": "./assets/mobileIcon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/artes/apresentacao.png",
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "",
+        "foregroundImage": "./assets/mobileIcon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
