--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -22,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/mobileIcon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.denneraugusto.proximonivel"
     },
     "web": {
       "favicon": "./assets/favicon.png"
