--- a/app.json
+++ b/app.json
@@ -14,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -25,7 +23,14 @@
         "foregroundImage": "./assets/mobileIcon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.denneraugusto.proximonivel"
+      "package": "com.denneraugusto.proximonivel",
+      "blockedPermissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_PHONE_STATE",
+        "android.permission.READ_CONTACTS"
+      ],
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png"
